# rules_cc_autoconf

./: MODULE.bazel
autoconf/: BUILD.bazel  autoconf.bzl  autoconf_srcs.bzl  meson_hdr.bzl  package_info.bzl
autoconf/private/checker/: check_runner.cc  check_runner.h
autoconf/tests/core/compute/: BUILD.bazel
meson_config/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  defs.bzl  meson_config.bzl
meson_config/expr_eval/: BUILD.bazel  expr_eval.py
meson_config/meson_bridge/: BUILD.bazel  load.py  meson_bridge.py
