load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":autoconf_bzl",
        ":autoconf_hdr_bzl",
        ":autoconf_srcs_bzl",
        ":autoconf_toolchain_bzl",
        ":cc_autoconf_info_bzl",
        ":checks_bzl",
        ":meson_hdr_bzl",
        ":package_info_bzl",
    ],
)

exports_files([
    "defs.bzl",
])
